<resources>
    <string name="app_name">Tripper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TRIPPER</string>
    <string name="nav_header_subtitle">CREATE YOUR OWN TRIPS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_your_trips">Your trips</string>
    <string name="menu_your_profile">Your profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="properties_title">Properties</string>
    <string name="properties_days">Number of days</string>
    <string name="properties_type">Mean of transport</string>
    <string name="properties_tile_source">Map layer</string>
    <string name="properties_max_distance">Max distance per day</string>

    <string name="fab_create_route">Create routes</string>
    <string name="fab_clear_map">Clear all markers</string>
    <string name="fab_properties">Properties</string>
    <string name="fab_my_location">My location</string>
    <string name="fab_clear_routes">Clear all routes</string>

    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <string name="title_reset_password">Reset password</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_sign_up">Sign up</string>

    <string name="btn_save">Save</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_cancel">Cancel</string>

    <string name="cb_remeber_me">Remember me</string>

    <string name="sign_in_success">Signed in successfully</string>
    <string name="sign_up_success">Signed up successfully</string>

    <string name="fragment_profile"></string>
    <string name="fragment_map_settings">Map settings</string>
    <string name="fragment_single_trip">Trip details</string>

    <string name="image_description">Profile image</string>

    <string name="username">Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="default_value">0</string>
    <string name="routes_created">ROUTES CREATED</string>
    <string name="routes_published">ROUTES PUBLISHED</string>
</resources>
